initial build part 2

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
     </header>
     <main>
         <div class="hero">
-            <div class="heading">
-                <h1>Your Favorite Animes in One Place</h1>
-                <button>Sign up</button>
-            </div>
-            <div class="slide-show">
-                <img src="#" alt="desccc">
-                <h2>Description of the image above</h2>
+            <div class="hero-content">
+                <div class="heading hero-child">
+                    <h1>Your Favorite Animes in One Place</h1>
+                    <a href="https://yanime.onrender.com/">Sign up</a>
+                </div>
+                <div class="slide-show hero-child">
+                    <img src="#" alt="desccc">
+                    <h2>Description of the image above</h2>
+                </div>
             </div>
         </div>
-        <div class="randomize id="randomize"></div>
+        <div class="randomize" id="randomize"></div>
     </main>
     <footer>
         <div class="site-description">
@@ -49,6 +51,9 @@
             </div>
         </div>
     </footer>
+    <script src="./index.js"></script>
+    <!-- <script src="https://yanime.onrender.com/" type="module" -->
+        <!-- integrity="sha384-MWfCL6g1OTGsbSwfuMHc8+8J2u71/LA8dzlIN3ycajckxuZZmF+DNjdm7O6H3PSq"></script> -->
 </body>
 
 </html>
