--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Yanime</title>
 </head>
 
-<body>
+<body data-instant-intensity="mousedown">
     <header>
-        <a href="/">Yanime</a>
+        <a href="https://yanime.onrender.com">Yanime</a>
         <span class="menu">
            <img class="menu-icon" src="./assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="click menu">
         </span>
@@ -22,15 +22,17 @@
             <div class="hero-content">
                 <div class="heading hero-child">
                     <h1>Your Favorite Animes in One Place</h1>
-                    <a href="https://yanime.onrender.com/">Sign up</a>
+                    <a href="https://yanime.onrender.com/signup">Sign up</a>
                 </div>
                 <div class="slide-show hero-child">
-                    <img src="#" alt="desccc">
-                    <h2>Description of the image above</h2>
+                    <img src="https://m.media-amazon.com/images/I/71XaapYlJEL.jpg" alt="chainsawman-cover-art">
+                    <h2>Denji was a small-time devil hunter just trying to survive in a harsh world. After being killed on a job, he is revived
+                    by his pet devil Pochita and becomes something new and dangerous—Chainsaw Man!</h2>
                 </div>
             </div>
         </div>
-        <div class="randomize" id="randomize"></div>
+        <div class="randomize" id="randomize">
+        </div>
     </main>
     <footer>
         <div class="site-description">
@@ -52,8 +54,7 @@
         </div>
     </footer>
     <script src="./index.js"></script>
-    <!-- <script src="https://yanime.onrender.com/" type="module" -->
-        <!-- integrity="sha384-MWfCL6g1OTGsbSwfuMHc8+8J2u71/LA8dzlIN3ycajckxuZZmF+DNjdm7O6H3PSq"></script> -->
+    <script src="https://yanime.onrender.com/" type="module" integrity="sha384-MWfCL6g1OTGsbSwfuMHc8+8J2u71/LA8dzlIN3ycajckxuZZmF+DNjdm7O6H3PSq"></script>
 </body>
 
 </html>
