--- a/index.html
+++ b/index.html
@@ -35,21 +35,23 @@
         </div>
     </main>
     <footer>
-        <div class="site-description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, a vitae, explicabo doloribus eligendi non impedit dicta blanditiis dolorem expedita minima voluptatem tenetur cumque. Vitae et voluptate quod corporis ipsum!</p>
-        </div>
-        <div class="quik-links">
-            <a href="#">FAQ</a>
-            <a href="#">Terms and Conditions</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact</a>
-        </div>
-        <div class="socials">
-            <span class="twitter"></span>
-            <span class="instagram"></span>
-            <span class="pinterest"></span>
-            <div class="ack">
-                <p>https://www.freepik.com/free-vector/perspective-japanese-street-neon-lights_9925878.htm#query=anime&position=0&from_view=keyword</p>
+        <div class="footer-contents">
+            <div class="site-description">
+                <p>Save your favorite animes in our website, give reviews on other people's added animes and upvote or downvote them while your at it. Our Comprehensive anime database extends across different kinds of genres and desires. <a href="https://yanime.onrender.com/signup">Sign up</a> now!</p>
+            </div>
+            <div class="quik-links">
+                <a href="#">FAQ</a>
+                <a href="#">Terms and Conditions</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact</a>
+            </div>
+            <div class="socials">
+                <span class="twitter"><img src="./assets/twitter.svg" alt="twitter icon"></span>
+                <span class="instagram"><img src="./assets/instagram.svg" alt="instagram icon"></span>
+                <span class="pinterest"><img src="./assets/pinterest.svg" alt="pinterest icon"></span>
+                <div class="ack">
+                    <p>hero image by: <a href="https://www.freepik.com/free-vector/perspective-japanese-street-neon-lights_9925878.htm#query=anime&position=0&from_view=keyword">freepik.com</a></p>
+                </div>
             </div>
         </div>
     </footer>
