change main page link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body data-instant-intensity="mousedown">
     <header>
-        <a href="https://yanime.onrender.com">Yanime</a>
+        <a href="https://yanime.onrender.com/anime">Yanime</a>
         <span class="menu">
            <img class="menu-icon" src="./assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="click menu">
         </span>
