Add loading icon

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             </div>
         </div>
         <div class="randomize" id="randomize">
+            <div class="loading-container">
+                <img src="./assets/bean-eater-loading.svg" alt="pacman-loading-icon" class="pacman-loading-icon">
+                <p class="loading-text">Getting animes</p>
+            </div>
         </div>
     </main>
     <footer>
