--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header>
         <a href="https://yanime.onrender.com/anime">Yanime</a>
         <span class="menu">
-           <img class="menu-icon" src="./assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="click menu">
+           <button class="menu-button">
+                <img class="menu-icon" src="./assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="click menu">
+            </button>
         </span>
     </header>
     <main>
