remove menu button

--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
 <body data-instant-intensity="mousedown">
     <header>
         <a href="https://yanime.onrender.com/anime">Yanime</a>
-        <span class="menu">
-           <button class="menu-button">
-                <img class="menu-icon" src="./assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="click menu">
-            </button>
-        </span>
     </header>
     <main>
         <div class="hero">
@@ -52,7 +47,7 @@
                 <a href="#">Contact</a>
             </div>
             <div class="socials">
-                <span class="twitter"><img src="./assets/twitter.svg" alt="twitter icon"></span>
+                <a href="https://twitter.com/_yanime" class="twitter"><img src="./assets/twitter.svg" alt="twitter icon"></ax>
                 <span class="instagram"><img src="./assets/instagram.svg" alt="instagram icon"></span>
                 <span class="pinterest"><img src="./assets/pinterest.svg" alt="pinterest icon"></span>
                 <div class="ack">
